Refs [Fix][HTTP] status 404 to 403
