# docs/api-docs.yml
@@ -120,7 +120,7 @@ paths:
           description: A successful response!
         '401':
           $ref: '#/components/responses/UnauthorizedError'
-        '404':
+        '403':
           $ref: '#/components/responses/UnauthorizedError'
         '500':
           description: A Failure response!
@@ -146,7 +146,7 @@ paths:
           description: A successful response!
         '401':
           $ref: '#/components/responses/UnauthorizedError'
-        '404':
+        '403':
           $ref: '#/components/responses/UnauthorizedError'
         '500':
           description: A Failure response!
@@ -175,7 +175,7 @@ paths:
           description: A successful response!
         '401':
           $ref: '#/components/responses/UnauthorizedError'
-        '404':
+        '403':
           $ref: '#/components/responses/UnauthorizedError'
         '500':
           description: A Failure response!
@@ -204,7 +204,7 @@ paths:
           description: A successful response!
         '401':
           $ref: '#/components/responses/UnauthorizedError'
-        '404':
+        '403':
           $ref: '#/components/responses/UnauthorizedError'
    /message/detail:
     post:
@@ -228,7 +228,7 @@ paths:
           description: A successful response!
         '401':
           $ref: '#/components/responses/UnauthorizedError'
-        '404':
+        '403':
           $ref: '#/components/responses/UnauthorizedError'
    /idol/register:
     post:
@@ -269,7 +269,7 @@ paths:
           description: A successful response!
         '401':
           $ref: '#/components/responses/UnauthorizedError'
-        '404':
+        '403':
           $ref: '#/components/responses/UnauthorizedError'
    /idol/update:
     post:
@@ -310,7 +310,7 @@ paths:
           description: A successful response!
         '401':
           $ref: '#/components/responses/UnauthorizedError'
-        '404':
+        '403':
           $ref: '#/components/responses/UnauthorizedError'
    /cart/list:
     post:
@@ -334,7 +334,7 @@ paths:
           description: A successful response!
         '401':
           $ref: '#/components/responses/UnauthorizedError'
-        '404':
+        '403':
           $ref: '#/components/responses/UnauthorizedError'
    /cart/add:
     post:
@@ -361,7 +361,7 @@ paths:
           description: A successful response!
         '401':
           $ref: '#/components/responses/UnauthorizedError'
-        '404':
+        '403':
           $ref: '#/components/responses/UnauthorizedError'
         '500':
           description: Idol not available!
@@ -391,7 +391,7 @@ paths:
           description: A successful response!
         '401':
           $ref: '#/components/responses/UnauthorizedError'
-        '404':
+        '403':
           $ref: '#/components/responses/UnauthorizedError'
         '500':
           description: Idol not available!
